<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>studio.magemonkey</groupId>
        <artifactId>magemonkey-parent</artifactId>
        <version>1.21.1-SNAPSHOT</version>
    </parent>

    <artifactId>fusion</artifactId>
    <name>Fusion</name>
    <version>1.0.1-R0.3-SNAPSHOT</version>

    <properties>
        <codex.version>1.0.1-R0.8-SNAPSHOT</codex.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>readme</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.basedir}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>doc</directory>
                                    <includes>
                                        <include>README.md</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>jar</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <includes>
                        <include>**/*FusionTest.java</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>sonatype</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </repository>

        <!-- McMMO -->
        <repository>
            <id>neetgames</id>
            <url>https://nexus.neetgames.com/repository/maven-releases/</url>
        </repository>
        <!-- Zrips Jobs -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>studio.magemonkey</groupId>
            <artifactId>codex</artifactId>
            <version>1.0.0-R0.27-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>studio.magemonkey</groupId>
            <artifactId>sapphire</artifactId>
            <version>1.0.0-R0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>studio.magemonkey</groupId>
            <artifactId>divinity</artifactId>
            <version>1.0.2-R0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>studio.magemonkey</groupId>
            <artifactId>fabled</artifactId>
            <version>1.0.0-R0.52-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.2.004</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Zrips</groupId>
            <artifactId>Jobs</artifactId>
            <version>v5.2.2.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.aurelium</groupId>
            <artifactId>auraskills-api-bukkit</artifactId>
            <version>2.1.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
